# MultiModalAgentMemory

./: .gitignore  README.md  pyproject.toml
configs/: phase1_toy_pilot.yaml
docs/: README.md  experimental_framework.md  idea_report.md  method_plan_repositioned.md  method_plan_v1.md  novelty_report.md  proposal.html  proposal_brief.md
modality_credit/: __init__.py  allocation.py  caching.py  config.py  pipeline.py  protocols.py  types.py  utility.py
modality_credit/adversarial/: audio_noise.py  base.py  caption_flip.py  entity_swap.py  frame_swap.py
modality_credit/audits/: base.py  conservation_residual.py  modality_leakage.py  positional_invariance.py  u_empty_baseline.py
modality_credit/data/: base.py  longvideobench.py  m3_bench.py  synthetic.py
modality_credit/estimator/: base.py  flat_shapley.py  item_only.py  kernel_shap.py  mc_permutation.py  owen.py
modality_credit/generators/: base.py  mock.py  qwen_vl.py
modality_credit/logging/: base.py  local.py  wandb_logger.py
modality_credit/masking/: base.py  redaction.py
modality_credit/metrics/: detection_auroc.py  pareto.py  separability.py  (+1 more)
scripts/: 02_toy_pilot.py  _diag_r19_outputs.py  _r1_diagnostic.py  _smoke_judge.py  _smoke_qwen.py  mini_owen_qwen.py  mini_owen_vision.py  phase0_audits.py  phase1_toy_pilot.py  r10b_variance_metric_fix.py  r11_redundancy_stress.py  r11b_pareto_sweep.py  r16_claim1_detection.py  r19_real_poisoning.py  r20_diverse_poisoning.py  sanity_owen.py  sanity_owen_v3.py  sanity_owen_v4.py
tests/: test_allocation.py  test_masking.py  test_owen_estimator.py
(+5 files in other folders)
