[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "modality_credit"
version = "0.1.0"
description = "Owen-value attribution for multimodal agent memory"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3.0",
    "transformers>=4.45.0",
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "hydra-core>=1.3",
    "wandb>=0.17",
    "pillow>=10.0",
    "decord>=0.6",
    "librosa>=0.10",
    "tqdm",
    "rich",
    "pydantic>=2.7",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov"]
human_study = ["streamlit>=1.36"]
deploy = ["modal>=0.64"]
qwen = ["qwen-vl-utils>=0.0.8", "torchvision>=0.18"]  # torchvision needed by Qwen2VLVideoProcessor

[tool.setuptools.packages.find]
include = ["modality_credit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
